[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Cannon/Cannon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Cannon/CannonBase.png" type="Texture" id=2]
[ext_resource path="res://Nodes/Projectile/ProjectileSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://Nodes/CannonHazard.gd" type="Script" id=4]
[ext_resource path="res://Nodes/Projectile/CannonBullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Nodes/Misc/CannonShootEffect.tscn" type="PackedScene" id=6]

[node name="CannonHazard" type="Node2D"]
script = ExtResource( 4 )
direction = Vector2( -1, 1 )
cannon_shoot_effect = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ProjectileSpawner" parent="." instance=ExtResource( 3 )]
speed = 100.0
bullet = ExtResource( 5 )
direction = Vector2( 1, 0 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
